--- a/index.html
+++ b/index.html
@@ -15,16 +15,18 @@
 	<meta name="twitter:description" content="Nina Carducci - Photographe Professionnelle">
 	<meta name="twitter:image" content="URL_DE_VOTRE_IMAGE">
 
-	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
-	<link rel="stylesheet" href="./assets/style.css">
+	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
+	<link rel="stylesheet" href="./assets/style-min.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
 	<meta charset="UTF-8">
 	<script src="./assets/bootstrap/bootstrap.bundle.js"></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-	<script src="./assets/maugallery.js"></script>
+	<!--<script src="./assets/index.js"></script>-->
+	<script src="./assets/maugallery-min.js"></script>
 	<script src="./assets/scripts.js"></script>
+	
 </head>
 <body>
 <header class="top-header">
@@ -70,7 +72,7 @@
 </div>
 <div id="about" aria-labelledby="about-title">
 	<div class="picture left">
-		<img src="./assets/images/nina.webp" alt="Photo Nina Carducci" height="418" width="417">
+		<img src="./assets/images/nina.webp" alt="Photo Nina Carducci"  width="" height="">
 	</div>
 	<div id="about-me">
 		<h2 id="about-title" class="about-me__title">A propos de moi</h2>
@@ -92,7 +94,6 @@
 			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van.webp" alt="Photo Nino Van"/>
 			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill.webp" alt="Photo Austin Neill"/>
 			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos.webp" alt="Photo Mateus Campos"/>
-		
 		</div>
 	</div>
 	<div class="quote">
@@ -163,7 +164,7 @@
 			</form>
 		</div>
 		<div class="picture right">
-			<img src="./assets/images/camera.webp" alt="Photo camera" height="399" width="398"/>
+			<img src="./assets/images/camera.webp" alt="Photo camera" width="" height=""/>
 		</div>
 	</div>
 </div>
