--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 		  },
 		  "telephone": "05 56 67 78 89",
 		  "openingHours": "Mo-Fr 10:00-19:00"
+		  "image": "./assets/images/nina.webp"
 		}
 		</script>
 </head>
