--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 	content="Nina Carducci, photographe professionnelle à Bordeaux vous propose de saisir des moments en photo afin de les rendre immortels.">
 	<meta name="twitter:creator" content="@Nina_Carducci">
 	<meta name="twitter:image" content="./assets/images/nina.webp">
-	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
-	<link rel="stylesheet" href="./assets/style-min.css">
+	<link rel="preload stylesheet" href="./assets/bootstrap/bootstrap.css">
+	<link rel="preload stylesheet" href="./assets/style-min.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="preload stylesheet">
 	<meta charset="UTF-8">
 	<script src="./assets/bootstrap/bootstrap.bundle.js"></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
@@ -37,8 +37,8 @@
 			"postalCode": "33200"
 		  },
 		  "telephone": "05 56 67 78 89",
-		  "openingHours": "Mo-Fr 10:00-19:00"
-		  "image": "./assets/images/nina.webp"
+		  "openingHours": "Mo-Fr 10:00-19:00",
+		  "image": "https://devuserman.github.io/assets/images/nina.webp"
 		}
 		</script>
 </head>
